# sf-hackathon

./: .gitignore  Dockerfile  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: discovery_agent.py  monitor_agent.py  risk_agent.py
backend/app/tools/: bigquery_tools.py  gcp_scanner.py  risk_classifier.py
demo-agents/: deploy.sh
demo-agents/invoice-agent-v2/: Dockerfile  main.py
demo-agents/shadow-data-collector/: Dockerfile  main.py
demo-agents/trusted-hr-processor/: main.py
frontend/: index.html  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AgentGraph.jsx  LiveMonitor.jsx  SidePanel.jsx
frontend/src/hooks/: useAgentSocket.js
scripts/: deploy-backend.sh  setup.sh
terraform/: bigquery.tf  iam.tf  main.tf  outputs.tf  variables.tf
